Fix alignment in footer

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -57,7 +57,7 @@
     .text {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        justify-content: center;
     }
 
     .links {
